--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: ##f4cccc;
+    background-color: #f4cccc;
     padding: 20px;
     text-align: center;
     color: white;
